Menambahkan beberapa translate eng dan in, dan menambahkan btn ambil & jam pada laporan

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -131,4 +131,134 @@
     <string name="register_PW">Enter Password</string>
     <string name="login_NoHP">Enter No Handphone</string>
     <string name="login_pw">Enter Password</string>
+    <string name="NamaTambahan">Additional Names</string>
+    <string name="dialog_idPelanggan">ID Customer</string>
+    <string name="dialog_NamaPelanggan">Customer Name</string>
+    <string name="dialog_Alamat">Addrress</string>
+    <string name="dialog_NoHP">No HP</string>
+    <string name="dialog_Terdaftar">Registered</string>
+    <string name="dialog_Sunting">Edit</string>
+    <string name="dialog_Hapus">Delete</string>
+    <string name="DetailPelanggan">Details Customer</string>
+    <string name="dialog_IDPegawai">ID Employee</string>
+    <string name="dialog_NamaPegawai">Employee Name</string>
+    <string name="dialog_AlamatPegawai">Addrress</string>
+    <string name="dialog_NoHPPegawai">No HP</string>
+    <string name="dialog_TerdaftarPegawai">Registered</string>
+    <string name="dialog_Cabang">Branch</string>
+    <string name="dialog_SuntingPegawai">Edit</string>
+    <string name="dialog_HapusPegawai">Delete</string>
+    <string name="DetailPegawai">Details Employee</string>
+    <string name="HubungiPelanggan">Contact Customer</string>
+    <string name="PilihMetodeMenghubungi">Select Contact Method</string>
+    <string name="BatalPelanggan">Cancel</string>
+    <string name="HubungiPegawai">Contact Employee</string>
+    <string name="PilihMetodeMenghubungiPegawai">Select Contact Method</string>
+    <string name="BatalPegawai">Cancel</string>
+    <string name="PembayaranLaporan">Payment</string>
+    <string name="PilihMetodePembayaranLaporan">Select Payment Method:</string>
+    <string name="BatalLaporan">Cancel</string>
+    <string name="metodePembayaran">Payment</string>
+    <string name="metodePilihMetodePembayaran">Select Payment Method:</string>
+    <string name="metodeBatal">Cancel</string>
+    <string name="DiambilPada">Taken On</string>
+    <string name="IDTambahan">Additional ID</string>
+    <string name="DataPelanggan">Customer Data</string>
+    <string name="DataPelangganNamaPelanggan">Customer Name:</string>
+    <string name="DataPelangganNoHP">No HP:</string>
+    <string name="DataPelangganLayananUtama">Main Services</string>
+    <string name="DataPelangganNamaLayanan">Service Name:</string>
+    <string name="DataPelangganHarga">Price:</string>
+    <string name="DataPelangganLayananTambahan">Additional Services</string>
+    <string name="IDTransaksi">Transaction ID</string>
+    <string name="Tanggal">Date</string>
+    <string name="RincianTambahan">Additional Details</string>
+    <string name="Pelanggan">Customer</string>
+    <string name="Karyawan">Employee</string>
+    <string name="SubtotalTambahan">Additional Subtotals</string>
+    <string name="TotalBayar">Total Pay</string>
+    <string name="KirimWhatsApp">Send WhatsApp</string>
+    <string name="Cetak">Print</string>
+    <string name="KonfirmasiData">Data Confirmation</string>
+    <string name="KonfirmasiDataLayananTambahan">Additional Services</string>
+    <string name="KonfirmasiDataTotalBayar">Total Pay</string>
+    <string name="KonfirmasiDataBatal">Cancel</string>
+    <string name="KonfirmasiDataBayar">Payment</string>
+    <string name="EstimasiHariIni">Today\'s Estimate</string>
+    <string name="Transaksi">Transaction</string>
+    <string name="mainPelanggan">Customer</string>
+    <string name="mainLaporan">Report</string>
+    <string name="mainAkun">Account</string>
+    <string name="mainLayanan">Service</string>
+    <string name="mainTambahan">Addition</string>
+    <string name="mainPegawai">Employee</string>
+    <string name="mainCabang">Branch</string>
+    <string name="mainPrinter">Printers</string>
+    <string name="toast_failed_save">Failed to save data</string>
+    <string name="toast_succes_save">Save data</string>
+    <string name="toast_save_cabang">Save</string>
+    <string name="toast_edit_cabang">Edit</string>
+    <string name="toast_perbarui_cabang">Update</string>
+    <string name="toast_DataCabangBerhasilDiperbarui">Branch Data Successfully Updated</string>
+    <string name="toast_DataCabangGagalDiperbarui">"Branch Data Failed to Update "</string>
+    <string name="toast_GagalmemuatdataCabang">Failed to Load Data</string>
+    <string name="toast_EditCabang">Edit Branch</string>
+    <string name="toast_Editcabang">Edit</string>
+    <string name="toast_TambahCabang">Add Branch</string>
+    <string name="toast_Simpancabang">Save</string>
+    <string name="toast_Cabangberhasildisimpan">Saved Successfully</string>
+    <string name="toast_GagalmenyimpanCabang">Failed to Save</string>
+    <string name="NomorHPharusberupaangka">Mobile number must be in numbers</string>
+    <string name="Simpanpegawai">Save</string>
+    <string name="EditPegawai">Edit</string>
+    <string name="PerbaruiPegawai">Update</string>
+    <string name="toast_Pegawaiberhasildisimpan">Saved Successfully</string>
+    <string name="toast_PegawaiGagaldisimpan">Failed to Save</string>
+    <string name="toast_DataPegawaiBerhasilDiperbarui">" Data Successfully Updated"</string>
+    <string name="toast_DataPegawaiGagalDiperbarui">"Data Failed to Update "</string>
+    <string name="toast_GagalmemuatdataPegawai">Failed to Load Data</string>
+    <string name="toast_TambahPegawai">Add Employee</string>
+    <string name="toast_SimpanPegawai">Save</string>
+    <string name="toast_EditPegawai">Edit Employee</string>
+    <string name="toast_Editpegawai">Edit</string>
+    <string name="Datalaporantersimpan">Report data is saved</string>
+    <string name="Gagalmenyimpanlaporan">Failed to save report</string>
+    <string name="NomorHPpelanggantidaktersedia">Customer mobile number is not available</string>
+    <string name="IzinBluetoothbelumdiberikan">Bluetooth permission has not been granted</string>
+    <string name="Berhasilmencetakinvoice">Successfully printed invoice</string>
+    <string name="Deviceprintertidakditemukan">Printer device not found</string>
+    <string name="IzinBluetoothdiperlukanuntukmencetak">Bluetooth permission is required for printing</string>
+    <string name="toast_Bluetoothtidaktersediaatautidakaktif">Bluetooth is not available or is disabled</string>
+    <string name="toast_IzinBluetoothdiberikan">Bluetooth permission granted</string>
+    <string name="toast_IzinBluetoothditolak">Bluetooth permission denied</string>
+    <string name="toast_Registrasiberhasil">Registration Successful!</string>
+    <string name="toast_Harapisisemuadata">Please fill in all data</string>
+    <string name="toast_BerhasilLogin">Login Successfully</string>
+    <string name="toast_Logingagal">Login Failed</string>
+    <string name="toast_Isisemuadata">Fill in all data</string>
+    <string name="toast_EditPelanggan">Edit Customer</string>
+    <string name="toast_Editpelanggan">Edit</string>
+    <string name="toast_GagalmemuatdataPelanggan">Failed to load Customer data</string>
+    <string name="toast_TambahPelanggan">Add Customer</string>
+    <string name="toast_SimpanPelanggan">Save</string>
+    <string name="toast_DataPelangganBerhasilDiperbarui">Customer Data Successfully Updated</string>
+    <string name="toast_DataPlangganGagalDiperbarui">Customer Data Failed to Update</string>
+    <string name="NomorHPharusberupaangkaPelanggan">Mobile number must be numbers</string>
+    <string name="SimpanPelanggan">Save</string>
+    <string name="EditPelanggan">Edit</string>
+    <string name="PerbaruiPelanggan">Update</string>
+    <string name="toast_BatalMemilihPelanggan">Cancel customer selection</string>
+    <string name="toast_BatalMemilihLayanan">Cancel service selection</string>
+    <string name="toast_Lengkapidatapelanggandanlayanan">Complete customer and service data</string>
+    <string name="toast_Layanantambahansudahada">Additional services already exist</string>
+    <string name="selamat_pagi">Good Morning, %1$s</string>
+    <string name="selamat_siang">Good Afternoon, %1$s</string>
+    <string name="selamat_sore">Good Evening, %1$s</string>
+    <string name="selamat_malam">Good Night, %1$s</string>
+    <string name="Logout">Log Out</string>
+    <string name="toast_BerhasilLogout">Successful Log Out</string>
+    <string name="ApakahAndayakininginkeluar">Are you sure you want to exit?</string>
+    <string name="Ya">Yes</string>
+    <string name="Batal">Cancel</string>
+    <string name="toast_KonfirmasiLogout">Confirm Log Out</string>
 </resources>
