--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -131,4 +131,135 @@
     <string name="register_PW">Masukkan Kata Sandi</string>
     <string name="login_NoHP">Masukkan No Telepon</string>
     <string name="login_pw">Masukkan Kata Sandi</string>
+    <string name="NamaTambahan">Nama Tambahan</string>
+    <string name="dialog_idPelanggan">ID Pelanggan</string>
+    <string name="dialog_NamaPelanggan">Nama Pelanggan</string>
+    <string name="dialog_Alamat">Alamat</string>
+    <string name="dialog_NoHP">No HP</string>
+    <string name="dialog_Terdaftar">Terdaftar</string>
+    <string name="dialog_Sunting">Sunting</string>
+    <string name="dialog_Hapus">Hapus</string>
+    <string name="DetailPelanggan">Detail Pelanggan</string>
+    <string name="dialog_IDPegawai">ID Pegawai</string>
+    <string name="dialog_NamaPegawai">Nama Pegawai</string>
+    <string name="dialog_AlamatPegawai">Alamat</string>
+    <string name="dialog_NoHPPegawai">No HP</string>
+    <string name="dialog_TerdaftarPegawai">Terdaftar</string>
+    <string name="dialog_Cabang">Cabang</string>
+    <string name="dialog_SuntingPegawai">Sunting</string>
+    <string name="dialog_HapusPegawai">Hapus</string>
+    <string name="DetailPegawai">Detail Pegawai</string>
+    <string name="HubungiPelanggan">Hubungi Pelanggan</string>
+    <string name="PilihMetodeMenghubungi">Pilih Metode Menghubungi:</string>
+    <string name="BatalPelanggan">Batal</string>
+    <string name="HubungiPegawai">Hubungi Pegawai</string>
+    <string name="PilihMetodeMenghubungiPegawai">Pilih Metode Menghubungi:</string>
+    <string name="BatalPegawai">Batal</string>
+    <string name="PembayaranLaporan">Pembayaran</string>
+    <string name="PilihMetodePembayaranLaporan">Pilih Metode Pembayaran:</string>
+    <string name="BatalLaporan">Batal</string>
+    <string name="metodePembayaran">Pembayaran</string>
+    <string name="metodePilihMetodePembayaran">Pilih Metode Pembayaran:</string>
+    <string name="metodeBatal">Batal</string>
+    <string name="DiambilPada">Diambil Pada</string>
+    <string name="IDTambahan">ID Tambahan</string>
+    <string name="DataPelanggan">Data Pelanggan</string>
+    <string name="DataPelangganNamaPelanggan">Nama Pelanggan:</string>
+    <string name="DataPelangganNoHP">No HP:</string>
+    <string name="DataPelangganLayananUtama">Layanan Utama</string>
+    <string name="DataPelangganNamaLayanan">Nama Layanan:</string>
+    <string name="DataPelangganHarga">Harga:</string>
+    <string name="DataPelangganLayananTambahan">Layanan Tambahan</string>
+    <string name="IDTransaksi">ID Transaksi</string>
+    <string name="Tanggal">Tanggal</string>
+    <string name="RincianTambahan">Rincian Tambahan</string>
+    <string name="Pelanggan">Pelanggan</string>
+    <string name="Karyawan">Karyawan</string>
+    <string name="SubtotalTambahan">Subtotal Tambahan</string>
+    <string name="TotalBayar">Total Bayar</string>
+    <string name="KirimWhatsApp">Kirim WhatsApp</string>
+    <string name="Cetak">Cetak</string>
+    <string name="KonfirmasiData">Konfirmasi Data</string>
+    <string name="KonfirmasiDataLayananTambahan">Layanan Tambahan</string>
+    <string name="KonfirmasiDataTotalBayar">Total Bayar</string>
+    <string name="KonfirmasiDataBatal">Batal</string>
+    <string name="KonfirmasiDataBayar">Pembayaran</string>
+    <string name="EstimasiHariIni">Estimasi Hari Ini</string>
+    <string name="Transaksi">Transaksi</string>
+    <string name="mainPelanggan">Pelanggan</string>
+    <string name="mainLaporan">Laporan</string>
+    <string name="mainAkun">Akun</string>
+    <string name="mainLayanan">Layanan</string>
+    <string name="mainTambahan">Tambahan</string>
+    <string name="mainPegawai">Pegawai</string>
+    <string name="mainCabang">Cabang</string>
+    <string name="mainPrinter">Printer</string>
+    <string name="toast_failed_save">Gagal simpan data</string>
+    <string name="toast_succes_save">Simpan data</string>
+    <string name="toast_save_cabang">Simpan</string>
+    <string name="toast_edit_cabang">Sunting</string>
+    <string name="toast_perbarui_cabang">Perbarui</string>
+    <string name="toast_DataCabangBerhasilDiperbarui">Data Cabang Berhasil Diperbarui</string>
+    <string name="toast_DataCabangGagalDiperbarui">Data Cabang Gagal Diperbarui</string>
+    <string name="toast_GagalmemuatdataCabang">Gagal Memuat Data</string>
+    <string name="toast_EditCabang">Sunting Cabang</string>
+    <string name="toast_Editcabang">Sunting</string>
+    <string name="toast_TambahCabang">Tambah Cabang</string>
+    <string name="toast_Simpancabang">Simpan</string>
+    <string name="toast_Cabangberhasildisimpan">Berhasil Disimpan</string>
+    <string name="toast_GagalmenyimpanCabang">Gagal Disimpan</string>
+    <string name="NomorHPharusberupaangka">No HP harus berupa angka</string>
+    <string name="Simpanpegawai">Simpan</string>
+    <string name="EditPegawai">Sunting</string>
+    <string name="PerbaruiPegawai">Perbarui</string>
+    <string name="toast_Pegawaiberhasildisimpan">Berhasil Disimpan</string>
+    <string name="toast_PegawaiGagaldisimpan">Gagal Disimpan</string>
+    <string name="toast_DataPegawaiBerhasilDiperbarui">Data Berhasil Diperbarui</string>
+    <string name="toast_DataPegawaiGagalDiperbarui">Data Gagal Diperbarui</string>
+    <string name="toast_GagalmemuatdataPegawai">Gagal memuat data pegawai</string>
+    <string name="toast_TambahPegawai">Tambah Pegawai</string>
+    <string name="toast_SimpanPegawai">Simpan</string>
+    <string name="toast_EditPegawai">Sunting Pegawai</string>
+    <string name="toast_Editpegawai">Sunting</string>
+    <string name="Datalaporantersimpan">Data Laporan tersimpan</string>
+    <string name="Gagalmenyimpanlaporan">Gagal menyimpan laporan</string>
+    <string name="NomorHPpelanggantidaktersedia">Nomor HP pelanggan tidak tersedia</string>
+    <string name="IzinBluetoothbelumdiberikan">Izin Bluetooth belum diberikan</string>
+    <string name="Berhasilmencetakinvoice">Berhasil mencetak invoice</string>
+    <string name="Deviceprintertidakditemukan">Device printer tidak ditemukan</string>
+    <string name="IzinBluetoothdiperlukanuntukmencetak">IzinBluetooth diperlukan untuk mencetak</string>
+    <string name="toast_Bluetoothtidaktersediaatautidakaktif">Bluetooth tidak tersedia atau tidak aktif</string>
+    <string name="toast_IzinBluetoothdiberikan">Izin Bluetooth diberikan</string>
+    <string name="toast_IzinBluetoothditolak">Izin Bluetooth ditolak</string>
+    <string name="toast_Registrasiberhasil">Registrasi Berhasil!</string>
+    <string name="toast_Harapisisemuadata">Harap isi semua data</string>
+    <string name="toast_BerhasilLogin">Berhasil Login</string>
+    <string name="toast_Logingagal">Login Gagal</string>
+    <string name="toast_Isisemuadata">Isi semua data</string>
+    <string name="toast_EditPelanggan">Sunting Pelanggan</string>
+    <string name="toast_Editpelanggan">Sunting</string>
+    <string name="toast_GagalmemuatdataPelanggan">Gagal memuat data Pelanggan</string>
+    <string name="toast_TambahPelanggan">Tambah Pelanggan</string>
+    <string name="toast_SimpanPelanggan">Simpan</string>
+    <string name="toast_DataPelangganBerhasilDiperbarui">Data Pelanggan Berhasil Diperbarui</string>
+    <string name="toast_DataPlangganGagalDiperbarui">Data Pelanggan Gagal Diperbarui</string>
+    <string name="NomorHPharusberupaangkaPelanggan">Nomor HP harus berupa angka</string>
+    <string name="SimpanPelanggan">Simpan</string>
+    <string name="EditPelanggan">Sunting</string>
+    <string name="PerbaruiPelanggan">Perbarui</string>
+    <string name="toast_Lengkapidatapelanggandanlayanan">Lengkapi data pelanggan dan layanan</string>
+    <string name="toast_Layanantambahansudahada">Layanan tambahan sudah ada</string>
+    <string name="toast_BatalMemilihPelanggan">Batal memilih pelanggan</string>
+    <string name="toast_BatalMemilihLayanan">Batal  memilih layanan</string>
+    <string name="selamat_pagi">Selamat Pagi, %1$s</string>
+    <string name="selamat_siang">Selamat Siang, %1$s</string>
+    <string name="selamat_sore">Selamat Sore, %1$s</string>
+    <string name="selamat_malam">Selamat Malam, %1$s</string>
+    <string name="Logout">Keluar</string>
+    <string name="toast_BerhasilLogout">Berhasil Keluar</string>
+    <string name="ApakahAndayakininginkeluar">Apakah Anda yakin ingin keluar?</string>
+    <string name="Ya">Ya</string>
+    <string name="Batal">Batal</string>
+    <string name="toast_KonfirmasiLogout">Konfirmasi Keluar</string>
+
 </resources>
