--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,134 @@
     <string name="register_PW">register_PW</string>
     <string name="login_NoHP">login_NoHP</string>
     <string name="login_pw">login_pw</string>
+    <string name="NamaTambahan">NamaTambahan</string>
+    <string name="dialog_idPelanggan">dialog_idPelanggan</string>
+    <string name="dialog_NamaPelanggan">dialog_NamaPelanggan</string>
+    <string name="dialog_Alamat">dialog_Alamat</string>
+    <string name="dialog_NoHP">dialog_NoHP</string>
+    <string name="dialog_Terdaftar">dialog_Terdaftar</string>
+    <string name="dialog_Sunting">dialog_Sunting</string>
+    <string name="dialog_Hapus">dialog_Hapus</string>
+    <string name="DetailPelanggan">DetailPelanggan</string>
+    <string name="dialog_IDPegawai">dialog_IDPegawai</string>
+    <string name="dialog_NamaPegawai">dialog_NamaPegawai</string>
+    <string name="dialog_AlamatPegawai">dialog_AlamatPegawai</string>
+    <string name="dialog_NoHPPegawai">dialog_NoHPPegawai</string>
+    <string name="dialog_TerdaftarPegawai">dialog_TerdaftarPegawai</string>
+    <string name="dialog_Cabang">dialog_Cabang</string>
+    <string name="dialog_SuntingPegawai">dialog_SuntingPegawai</string>
+    <string name="dialog_HapusPegawai">dialog_HapusPegawai</string>
+    <string name="DetailPegawai">DetailPegawai</string>
+    <string name="HubungiPelanggan">HubungiPelanggan</string>
+    <string name="PilihMetodeMenghubungi">PilihMetodeMenghubungi:</string>
+    <string name="BatalPelanggan">BatalPelanggan</string>
+    <string name="HubungiPegawai">HubungiPegawai</string>
+    <string name="PilihMetodeMenghubungiPegawai">PilihMetodeMenghubungiPegawai</string>
+    <string name="BatalPegawai">BatalPegawai</string>
+    <string name="PembayaranLaporan">PembayaranLaporan</string>
+    <string name="PilihMetodePembayaranLaporan">PilihMetodePembayaranLaporan</string>
+    <string name="BatalLaporan">BatalLaporan</string>
+    <string name="metodePembayaran">metodePembayaran</string>
+    <string name="metodePilihMetodePembayaran">metodePilihMetodePembayaran</string>
+    <string name="metodeBatal">metodeBatal</string>
+    <string name="DiambilPada">DiambilPada</string>
+    <string name="IDTambahan">IDTambahan</string>
+    <string name="DataPelanggan">DataPelanggan</string>
+    <string name="DataPelangganNamaPelanggan">DataPelangganNamaPelanggan</string>
+    <string name="DataPelangganNoHP">DataPelangganNoHP</string>
+    <string name="DataPelangganLayananUtama">DataPelangganLayananUtama</string>
+    <string name="DataPelangganNamaLayanan">DataPelangganNamaLayanan</string>
+    <string name="DataPelangganHarga">DataPelangganHarga</string>
+    <string name="DataPelangganLayananTambahan">DataPelangganLayananTambahan</string>
+    <string name="IDTransaksi">IDTransaksi</string>
+    <string name="Tanggal">Tanggal</string>
+    <string name="RincianTambahan">RincianTambahan</string>
+    <string name="Pelanggan">Pelanggan</string>
+    <string name="Karyawan">Karyawan</string>
+    <string name="SubtotalTambahan">SubtotalTambahan</string>
+    <string name="TotalBayar">TotalBayar</string>
+    <string name="KirimWhatsApp">KirimWhatsApp</string>
+    <string name="Cetak">Cetak</string>
+    <string name="KonfirmasiData">KonfirmasiData</string>
+    <string name="KonfirmasiDataLayananTambahan">KonfirmasiDataLayananTambahan</string>
+    <string name="KonfirmasiDataTotalBayar">KonfirmasiDataTotalBayar</string>
+    <string name="KonfirmasiDataBatal">KonfirmasiDataBatal</string>
+    <string name="KonfirmasiDataBayar">KonfirmasiDataBayar</string>
+    <string name="EstimasiHariIni">EstimasiHariIni</string>
+    <string name="Transaksi">Transaksi</string>
+    <string name="mainPelanggan">mainPelanggan</string>
+    <string name="mainLaporan">mainLaporan</string>
+    <string name="mainAkun">mainAkun</string>
+    <string name="mainLayanan">mainLayanan</string>
+    <string name="mainTambahan">mainTambahan</string>
+    <string name="mainPegawai">mainPegawai</string>
+    <string name="mainCabang">mainCabang</string>
+    <string name="mainPrinter">mainPrinter</string>
+    <string name="toast_failed_save">toast_failed_save</string>
+    <string name="toast_succes_save">toast_succes_save</string>
+    <string name="toast_save_cabang">toast_save</string>
+    <string name="toast_edit_cabang">toast_edit</string>
+    <string name="toast_perbarui_cabang">toast_perbarui_cabang</string>
+    <string name="toast_DataCabangBerhasilDiperbarui">toast_DataCabangBerhasilDiperbarui</string>
+    <string name="toast_DataCabangGagalDiperbarui">toast_DataCabangGagalDiperbarui</string>
+    <string name="toast_GagalmemuatdataCabang">toast_GagalmemuatdataCabang</string>
+    <string name="toast_EditCabang">toast_EditCabang</string>
+    <string name="toast_Editcabang">toast_Editcabang</string>
+    <string name="toast_TambahCabang">toast_TambahCabang</string>
+    <string name="toast_Simpancabang">toast_Simpancabang</string>
+    <string name="toast_Cabangberhasildisimpan">toast_Cabangberhasildisimpan</string>
+    <string name="toast_GagalmenyimpanCabang">toast_GagalmenyimpanCabang</string>
+    <string name="NomorHPharusberupaangka">NomorHPharusberupaangka</string>
+    <string name="Simpanpegawai">Simpanpegawai</string>
+    <string name="EditPegawai">EditPegawai</string>
+    <string name="PerbaruiPegawai">PerbaruiPegawai</string>
+    <string name="toast_Pegawaiberhasildisimpan">toast_Pegawaiberhasildisimpan</string>
+    <string name="toast_PegawaiGagaldisimpan">toast_PegawaiGagaldisimpan</string>
+    <string name="toast_DataPegawaiBerhasilDiperbarui">toast_DataPegawaiBerhasilDiperbarui</string>
+    <string name="toast_DataPegawaiGagalDiperbarui">toast_DataPegawaiGagalDiperbarui</string>
+    <string name="toast_GagalmemuatdataPegawai">toast_GagalmemuatdataPegawai</string>
+    <string name="toast_TambahPegawai">toast_TambahPegawai</string>
+    <string name="toast_SimpanPegawai">toast_SimpanPegawai</string>
+    <string name="toast_EditPegawai">toast_EditPegawai</string>
+    <string name="toast_Editpegawai">toast_Editpegawai</string>
+    <string name="Datalaporantersimpan">Datalaporantersimpan</string>
+    <string name="Gagalmenyimpanlaporan">Gagalmenyimpanlaporan</string>
+    <string name="NomorHPpelanggantidaktersedia">NomorHPpelanggantidaktersedia</string>
+    <string name="IzinBluetoothbelumdiberikan">IzinBluetoothbelumdiberikan</string>
+    <string name="Berhasilmencetakinvoice">Berhasilmencetakinvoice</string>
+    <string name="Deviceprintertidakditemukan">Deviceprintertidakditemukan</string>
+    <string name="IzinBluetoothdiperlukanuntukmencetak">IzinBluetoothdiperlukanuntukmencetak</string>
+    <string name="toast_Bluetoothtidaktersediaatautidakaktif">toast_Bluetoothtidaktersediaatautidakaktif</string>
+    <string name="toast_IzinBluetoothdiberikan">toast_IzinBluetoothdiberikan</string>
+    <string name="toast_IzinBluetoothditolak">toast_IzinBluetoothditolak</string>
+    <string name="toast_Registrasiberhasil">toast_Registrasiberhasil</string>
+    <string name="toast_Harapisisemuadata">toast_Harapisisemuadata</string>
+    <string name="toast_BerhasilLogin">toast_BerhasilLogin</string>
+    <string name="toast_Logingagal">toast_Logingagal</string>
+    <string name="toast_Isisemuadata">toast_Isisemuadata</string>
+    <string name="toast_EditPelanggan">toast_EditPelanggan</string>
+    <string name="toast_Editpelanggan">toast_Editpelanggan</string>
+    <string name="toast_GagalmemuatdataPelanggan">toast_GagalmemuatdataPelanggan</string>
+    <string name="toast_TambahPelanggan">toast_TambahPelanggan</string>
+    <string name="toast_SimpanPelanggan">toast_SimpanPelanggan</string>
+    <string name="toast_DataPelangganBerhasilDiperbarui">toast_DataPelangganBerhasilDiperbarui</string>
+    <string name="toast_DataPlangganGagalDiperbarui">toast_DataPlangganGagalDiperbarui</string>
+    <string name="NomorHPharusberupaangkaPelanggan">NomorHPharusberupaangkaPelanggan</string>
+    <string name="SimpanPelanggan">SimpanPelanggan</string>
+    <string name="EditPelanggan">EditPelanggan</string>
+    <string name="PerbaruiPelanggan">PerbaruiPelanggan</string>
+    <string name="toast_Lengkapidatapelanggandanlayanan">toast_Lengkapidatapelanggandanlayanan</string>
+    <string name="toast_Layanantambahansudahada">toast_NamaPELANGGAN</string>
+    <string name="toast_BatalMemilihPelanggan">toast_BatalMemilihPelanggan</string>
+    <string name="toast_BatalMemilihLayanan">toast_BatalMemilihLayanan</string>
+    <string name="selamat_pagi">selamat_pagi</string>
+    <string name="selamat_siang">selamat_siang</string>
+    <string name="selamat_sore">selamat_sore</string>
+    <string name="selamat_malam">selamat_malam</string>
+    <string name="Logout">Logout</string>
+    <string name="toast_BerhasilLogout">toast_BerhasilLogout</string>
+    <string name="toast_KonfirmasiLogout">toast_KonfirmasiLogout</string>
+    <string name="ApakahAndayakininginkeluar">ApakahAndayakininginkeluar</string>
+    <string name="Ya">Ya</string>
+    <string name="Batal">Batal</string>
 </resources>
